# project

./: README.md  memo.md  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_post_slug.py  0003_comment.py  0004_post_tags.py
blog/templates/blog/: base.html  detail.html  list.html  template.html
blog/templates/project/: home.html
project/: settings.py  urls.py  views.py
templates/blog/: author.html  list.html  testing.html
theme/static_src/src/: styles.css
wiki/: urls.py  views.py
wiki/templates/: template.html  testing.html
